# Benchmark-Suite

./: .gitignore  README.md  REPORT.md  TASK.md  config.json  docker-compose.yml  dockerfile  dockerignore  implement_later.txt  pyproject.toml
configs/: default.json  default.yaml
results/: benchmark_2025-05-30_20-52-31.json  benchmark_2025-05-30_21-05-11.json  benchmark_2025-05-30_21-51-08.json  benchmark_2025-05-30_21-58-59.json  benchmark_2025-05-30_22-09-41.json  benchmark_2025-05-30_22-33-35.json  benchmark_2025-05-31_01-15-24.json  benchmark_2025-05-31_01-51-18.json  benchmark_2025-05-31_01-53-48.json  benchmark_2025-05-31_17-16-05.json  compile_benchmark_2025-05-31_18-00-36.json  compile_benchmark_2025-05-31_18-03-59.json  compile_benchmark_2025-05-31_18-06-22.json  compile_benchmark_2025-05-31_18-10-02.json  compile_benchmark_2025-05-31_18-13-38.json  compile_benchmark_2025-05-31_18-20-58.json  compile_benchmark_2025-06-02_14-56-06.json  compile_benchmark_2025-06-02_20-40-10.json  compile_benchmarks_2025-06-06_12-30-29.json  micro_benchmarks_2025-06-02_21-08-29.json  micro_benchmarks_2025-06-03_10-58-40.json  micro_benchmarks_2025-06-04_17-43-09.json  micro_benchmarks_2025-06-05_00-23-55.json  micro_benchmarks_2025-06-05_00-31-24.json  micro_benchmarks_2025-06-05_00-32-10.json  micro_benchmarks_2025-06-05_00-42-29.json  micro_benchmarks_2025-06-05_00-45-29.json  micro_benchmarks_2025-06-05_01-50-35.json  micro_benchmarks_2025-06-05_02-15-41.json  micro_benchmarks_2025-06-06_09-18-32.json  microbenchmarks_2025-06-02_15-00-12.json  microbenchmarks_2025-06-02_15-01-57.json  microbenchmarks_2025-06-02_15-02-37.json  microbenchmarks_2025-06-02_15-03-35.json  microbenchmarks_2025-06-02_15-04-51.json  ml_benchmarks_2025-06-02_15-09-25.json  ml_benchmarks_2025-06-02_15-09-52.json  ml_workloads_2025-06-02_22-48-23.json  ml_workloads_2025-06-02_22-48-33.json  ml_workloads_2025-06-02_22-49-00.json  (+23 more)
results/docker_aarch64/: micro_benchmarks_2025-06-07_14-33-59.json  ml_workloads_2025-06-07_14-42-24.json  sorting_benchmarks_2025-06-07_14-31-31.json  sql_benchmarks_2025-06-07_14-32-04.json
results/linux_aarch64/: micro_benchmarks_2025-06-07_18-40-00.json  ml_workloads_2025-06-07_18-40-17.json  (+2 more)
src/: compile_benchmarks.py  compiler_benchmarks.py  micro_benchmarks.py  microbenchmarks.py  ml_workloads.py  run_all.py  run_pytorch.py  run_tensorflow.py  sorting_benchmarks.py  sql_benchmarks.py
(+68 files in other folders)
