[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark-suite"
version = "0.1.0"
description = "Cross-platform benchmarking suite for ML, DB, Compiler, Sorting, Microbenchmarks and system metrics"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [
	{ name = "Paul Hondola", email = "paulhondola@gmail.com" },
	{ name = "Dan Ghincul", email = "ghinculdan@icloud.com" },
]

dependencies = [
	"psutil",
	"py-cpuinfo",
	"matplotlib",
	"numpy",
	"pandas",
	"scikit-learn",
	"torch",
	"sqlalchemy",
]

[project.optional-dependencies]
windows = ["tensorflow"]                         # no ARM support
macos = ["tensorflow-macos", "tensorflow-metal"] # defaults to MPS
